# fin-docs-clustering

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  download_dataset.py  main.py  pyproject.toml  requirements.txt
clustering_pipeline/: download_dataset.py
clustering_pipeline/docs_clustering/: docs_clustering.py
clustering_pipeline/docs_clustering/cluster_algorithm/: cluster_algorithm.py  kmeans.py
clustering_pipeline/feature_engineering/: feature_engineering.py
clustering_pipeline/feature_engineering/embedding_llm/: .env-example  embedding_llm.py  embedding_llm_openai.py
clustering_pipeline/feature_extraction/: feature_extraction.py  models.py
clustering_pipeline/feature_extraction/llm/: .env-example  llm.py  llm_openai.py
clustering_pipeline/feature_extraction/prompt/: system_prompt.txt
configs/: config.yaml
tests/: test_feature_engineering.py  test_feature_extraction.py
